# ai-testcase-manager

./: .env.example  .gitignore  README.md  pyproject.toml
autotest/: README.md  conftest.py  pyproject.toml  run_tests.bat  run_tests.sh
autotest/api/: client.py  conftest.py  test_featurelist.py  test_generations.py  test_health_settings.py  test_knowledge.py  test_projects.py  test_requirements.py  test_review_testcases.py
autotest/ui/: conftest.py  test_generate_flow.py  test_knowledge.py  test_library.py  test_navigation.py  test_project_crud.py  test_settings.py
autotest/ui/pages/: base_page.py  generate_flow_page.py  knowledge_page.py  library_page.py  project_list_page.py  settings_page.py
backend/: .gitignore  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: evaluations.py  generations.py  knowledge.py  projects.py  requirements.py  settings.py  skills.py  testcases.py
backend/app/models/: evaluation.py  generation.py  knowledge.py  project.py  requirement.py  system_config.py  testcase.py
backend/app/schemas/: __init__.py
backend/app/services/: evaluation_service.py  featurelist_service.py  generation_service.py  knowledge_service.py  llm.py  project_service.py  quality_checker.py  testcase_export_service.py
backend/app/skills/: __init__.py  base.py  loader.py  registry.py
backend/app/skills/api_test/: handler.py  prompt.md  skill.yaml
backend/app/skills/case_judge/: handler.py  prompt.md
backend/app/skills/case_writer/: handler.py  prompt.md
backend/app/skills/requirement_parser/: prompt.md  skill.yaml
backend/app/skills/shared/: mock.py  (+3 more)
(+77 files in other folders)
